# moderm-chinese-dict

./: .editorconfig  .env  .gitignore  .npmrc  Cargo.toml  README.md  build.sh  index.html  package.json  pnpm-lock.yaml  vite.config.js
data/: radicals.json
node/: index.js
public/: manifest.json
public/assets/: manifest.json  pinyin.json  radicals.json
scripts/: gen_radicals_db.js
server/: _db.js  _db.test.js  _word.js  index.js
src/: about.vue  api.js  app.vue  index.js  main.rs  service.rs  styles.less  word.less  word.vue
tools/: _db.js  make_phrase_index.js  phrase_index.sql
web/: about.vue  api.js  app.vue  index.js  styles.less  word.vue
web/components/: App.vue  HanziIndexes.vue  PinyinIndex.vue  RadicalIndex.vue  Word.vue
