[package]
name = "modern_chinese_dict"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.3"
futures = "0.3.24"
jieba-rs = "0.6.6"
once_cell = "1.14.0"
poem = "1.3.41"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.21.0", features = ["full"] }

[profile.release]
lto = true
panic = 'abort'
opt-level = 3
strip = true
